--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                 
                 <!-- Right -->
                 <div id="instructions">
-                    
+                    <button class="btn" id="and">&and;</button>
+                    <button class="btn" id="or">&or;</button>
+                    <button class="btn" id="impl">&#8594;</button>
+                    <button class="btn" id="not">&not;</button>
                 </div>
             </div>
         </div>
