Finished evaluation & testing

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <!-- Right -->
                 <div id="instructions">
                     <button id="eval">Evaluate</button>
-                    <button id="and">&and;</button>
-                    <button id="or">&or;</button>
-                    <button id="impl">&#8594;</button>
-                    <button id="not">&not;</button>
+                    <button class="operator" id="and">&and;</button>
+                    <button class="operator" id="or">&or;</button>
+                    <button class="operator" id="impl">&#8594;</button>
+                    <button class="operator" id="not">&not;</button>
                 </div>
             </div>
         </div>
