--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8" />
         <title>PLease</title>
         
+        <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
+        
         <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/app.css" />
