--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         
         <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
         <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
+        <link rel="image_src" type="image/jpeg" href="images/penguin.jpg" />
         
         <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
