Added fb-share meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta property="og:image" content="images/penguin.jpg"/>
+        <meta property="og:title" content="PLease" />
+        <meta property="og:description"
+              content="A simple propositional logic prover that checks if a given argument is valid or invalid."/>
         
         <title>PLease</title>
         
